<resources>
    <string name="app_name">Confiautos</string>
    <string name="recuperar_password">Olvidé mi password</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="todo">TODO</string>
    <string name="apellido">Apellido</string>
    <string name="password">Password</string>
    <string name="nombre">(*) Nombre y Apellido</string>
    <string name="registroUsuario">Registro de Usuario</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="nro_de_telefono">Nro. de Teléfono</string>
    <string name="nro_de_documento">Nro. de Documento</string>
    <string name="tipo_de_documento">Tipo de Documento:</string>
    <string name="email">(*) E-mail</string>
    <string name="registrar">Registrar</string>
    <string name="volver">Volver</string>
    <string name="nombre_de_usuario">Usuario</string>
    <string name="logoapp">logoapp</string>
    <string name="actualizar_datos_personales">Actualizar Datos Personales</string>
    <string name="abrirCamara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="beneficios">BENEFICIOS</string>
    <string name="mis_turnos">MIS TURNOS</string>
    <string name="solicitar_turno">Solicitar Turno</string>
    <string name="nosotros">NOSOTROS</string>
    <string name="mis_autos">MIS AUTOS</string>
    <string name="mi_perfil">MI PERFIL</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="info_nosotros">Somos un taller especializado en amortiguadores, diagnóstico,
        discos de frenos, distribuciones, embragues y muchas áreas más.
        Con nosotros podras estar confiado de que los trabajos realizados serán de la mejor calidad.</string>
    <string name="ubicacion">Estamos ubicados en:</string>
    <string name="direccion_taller"> Bartolomé Mitre 970, C1036 AAR, Buenos Aires</string>
    <string name="acerca_nosotros">Acerca de nosotros</string>
    <string name="contacto">Contactanos:</string>
    <string name="telefono">+5191125401109</string>
    <string name="nuestras_redes">Redes Sociales:</string>
    <string name="bienvenido_usuario">Bienvenido/a </string>
    <string name="usuario">Usuario</string>
    <string name="guardar">Guardar</string>
    <string name="icoWhatsApp">icoWhatsApp</string>
    <string name="icoInstagram">IcoInstagram</string>
    <string name="Llamar">Llamar</string>
    <string name="Sms">Sms</string>
    <string name="recuperar">Recuperar</string>
    <string name="recuPass">Recuperar Password</string>
    <string name="ingresaEmail">Ingresa tu E-mail para recuperar tu password</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">Buscar</string>
    <string name="misautos">Mis Autos</string>
    <string name="indicaciones">Desde esta funcionalidad podrá visualizar y gestionar sus autos.</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="error">error</string>
    <string name="leyendaUsuario">(*) Usuario: 8 dígitos</string>
    <string name="leyendaPass">(*) Contraseña: 6 números</string>
    <string name="leyendaConfPass"> (*)Confirmar contraseña</string>
    <string name="leyendaTlf">(*) Telefono: Mínimo 10 números</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="nro_chasis">Nro. Chasis</string>
    <string name="nro_motor">Nro. Motor</string>
    <string name="leyenda_nro_chasis">Nro. Chasis: 12 digitos</string>
    <string name="leyenda_nro_motor">Nro. Motor: 9 dígitos</string>
    <string name="año">Año</string>
    <string name="auto">auto</string>
    <string name="tomarFoto">Camara</string>
    <string name="cargarFoto">Galeria</string>
    <string name="agregarAuto">Cargar los datos del Auto</string>
    <string name="agregarFotoAuto">Agregue una foto del auto</string>
    <string name="todoo">TODO</string>
    <string name="errorUsuario">El usuario debe tener 8 dígitos.</string>
    <string name="errorPass">La contraseña debe tener 6 números.</string>
    <string name="errorConfPass">Las contraseñas ingresadas deben coincidir.</string>
    <string name="errorNombreApe">Debe ingresar su nombre y Apellido, solo letras.</string>
    <string name="errorTelefono">El telefono debe contener al menos 10 números.</string>
    <string name="errorEmail">El e-mail ingresado no cumple con el formato de e-mail.</string>
    <string name="confirmar">Confirmar</string>
    <string name="turno_nuevo">Turno Nuevo</string>
    <string name="dia">Seleccione el día:</string>
    <string name="Calendario">Calendario</string>
    <string name="seleccione_la_hora">Seleccione la hora:</string>
    <string name="horario">Horario</string>
    <string name="dia_seleccionado">Día seleccionado:</string>
    <string name="horario_seleccionado">Horario seleccionado:</string>
    <string name="error_turno">Error Turno</string>
    <string name="seleccione_el_auto">Seleccione el auto:</string>
    <string name="auto_seleccionado">Auto seleccionado:</string>
    <string name="turnos_confirmado">Turnos Confirmado</string>
</resources>