<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Registro">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="146dp"
            android:layout_height="90dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logoapp"
            app:layout_constraintBottom_toTopOf="@+id/textRegistroPersona"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textRegistroPersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/registroUsuario"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/regUsuario"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/leyendaUsuario"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="319dp" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/leyendaPass"
            android:importantForAutofill="no"
            android:inputType="none|textPassword"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="366dp" />

        <EditText
            android:id="@+id/regConfPassword"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/leyendaConfPass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="425dp" />

        <EditText
            android:id="@+id/regNombre"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="191dp" />

        <EditText
            android:id="@+id/regApellido"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/apellido"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="264dp" />

        <EditText
            android:id="@+id/regNroTelefono"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/leyendaTlf"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="497dp" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="284dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="none|textEmailAddress"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="596dp" />

        <Button
            android:id="@+id/btnRegRegistrar"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:isScrollContainer="true"
            android:text="@string/registrar"
            android:textColor="#A62A2A"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="711dp" />

        <Button
            android:id="@+id/btnRegVolver"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:isScrollContainer="true"
            android:text="@string/volver"
            android:textColor="#A62A2A"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="711dp" />

        <TextView
            android:id="@+id/errorDatos"
            android:layout_width="347dp"
            android:layout_height="24dp"
            android:textAlignment="center"
            android:textColor="#DD0F0F"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="660dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>