<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/fotoAuto"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="665dp"
        android:contentDescription="@string/auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtModelo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/iconoauto" />

    <TextView
        android:id="@+id/txtModelo"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginEnd="9dp"
        android:text="@string/modelo"
        app:layout_constraintBottom_toTopOf="@+id/txtAño"
        app:layout_constraintEnd_toStartOf="@+id/txtNroMotor"
        app:layout_constraintStart_toEndOf="@+id/fotoAuto"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca" />

    <TextView
        android:id="@+id/txtAño"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="666dp"
        android:text="@string/año"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fotoAuto"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo" />

    <TextView
        android:id="@+id/txtNroChasis"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nro_chasis"
        app:layout_constraintBottom_toTopOf="@+id/txtNroMotor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtMarca"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNroMotor"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="686dp"
        android:text="@string/nro_motor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtModelo"
        app:layout_constraintTop_toBottomOf="@+id/txtNroChasis" />

    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:text="@string/marca"
        app:layout_constraintBottom_toTopOf="@+id/txtModelo"
        app:layout_constraintEnd_toStartOf="@+id/txtNroChasis"
        app:layout_constraintStart_toEndOf="@+id/fotoAuto"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>