<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RecuperarPassword">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="114dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="609dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtRecuperarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="46dp"
        android:text="@string/recuPass"
        android:textColor="#0C0C0C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtIngresaEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtIngresaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ingresaEmail"
        android:textColor="#191919"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editRecuEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecuperarPass" />

    <EditText
        android:id="@+id/editRecuEmail"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngresaEmail" />

    <Button
        android:id="@+id/btnBuscarEmail"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/recuperar"
        android:text="@string/buscar"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        app:backgroundTint="#D16C64"
        app:layout_constraintBottom_toTopOf="@+id/editRecuUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRecuEmail" />

    <EditText
        android:id="@+id/editRecuPassword"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:enabled="false"
        android:maxLength="6"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/editRecuConfiPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRecuUsuario"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editRecuUsuario"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/usuario"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editRecuPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editRecuConfiPass"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/confirmar_password"
        android:inputType="numberPassword"
        android:maxLength="6"
        app:layout_constraintBottom_toTopOf="@+id/txtError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRecuPassword" />

    <Button
        android:id="@+id/btnRecuGuardar"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:hint="@string/recuperar"
        android:text="@string/guardar"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        app:backgroundTint="#C8BEBD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRecuCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtError" />

    <Button
        android:id="@+id/btnRecuCancelar"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="56dp"
        android:hint="@string/recuperar"
        android:text="@string/cancelar"
        android:textColor="#0B0A0A"
        android:textSize="14sp"
        app:backgroundTint="#C8BEBD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRecuGuardar"
        app:layout_constraintTop_toBottomOf="@+id/txtError"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="307dp"
        android:layout_height="21dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="16dp"
        android:text="@string/error"
        android:textAlignment="center"
        android:textColor="#DD0F0F"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnRecuGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRecuConfiPass"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>