<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AgregarAuto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="146dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/logoapp"
        app:layout_constraintBottom_toTopOf="@+id/textTurnoNuevo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textTurnoNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="71dp"
        android:text="@string/agregarAuto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/regMarca"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/marca"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/regModelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegTomarFoto" />

    <EditText
        android:id="@+id/regModelo"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/modelo"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/regAnio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regMarca" />

    <EditText
        android:id="@+id/regAnio"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/año"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/regNroMotor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regModelo" />

    <EditText
        android:id="@+id/regNroMotor"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/leyenda_nro_motor"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="9"
        app:layout_constraintBottom_toTopOf="@+id/regNroChasis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAnio" />

    <EditText
        android:id="@+id/regNroChasis"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/leyenda_nro_chasis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="12"
        app:layout_constraintBottom_toTopOf="@+id/errorData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNroMotor" />

    <TextView
        android:id="@+id/textFotoAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="20dp"
        android:text="@string/agregarFotoAuto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegCargarFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTurnoNuevo" />

    <ImageView
        android:id="@+id/imgRegFotoAuto"
        android:layout_width="139dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/regMarca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFotoAuto"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/iconoauto"
        android:contentDescription="@string/todoo" />

    <Button
        android:id="@+id/btnRegCargarFoto"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:isScrollContainer="true"
        android:text="@string/cargarFoto"
        android:textColor="#A62A2A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegTomarFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgRegFotoAuto"
        app:layout_constraintTop_toBottomOf="@+id/textFotoAuto" />

    <Button
        android:id="@+id/btnRegTomarFoto"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:isScrollContainer="true"
        android:text="@string/tomarFoto"
        android:textColor="#A62A2A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/regMarca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgRegFotoAuto"
        app:layout_constraintTop_toBottomOf="@+id/btnRegCargarFoto" />

    <Button
        android:id="@+id/btnRegAutoGuardar"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="21dp"
        android:layout_weight="1"
        android:isScrollContainer="true"
        android:text="@string/guardar"
        android:textColor="#A62A2A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRegAutoCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorData" />

    <Button
        android:id="@+id/btnRegAutoCancelar"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:isScrollContainer="true"
        android:text="@string/cancelar"
        android:textColor="#A62A2A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegAutoGuardar"
        app:layout_constraintTop_toBottomOf="@+id/errorData"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/errorData"
        android:layout_width="347dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="#DD0F0F"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnRegAutoGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNroChasis" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>