<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgAutoCard"
            android:layout_width="230dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/iconoauto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/marcaTV"
                    android:layout_width="128dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/marca"
                    app:layout_constraintBottom_toTopOf="@+id/modeloTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/modeloTV"
                    android:layout_width="128dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/modelo"
                    app:layout_constraintBottom_toTopOf="@+id/anioTV"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/anioTV"
                    android:layout_width="128dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="ano"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/nroChasisTV"
                    android:layout_width="128dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="12dp"
                    android:hint="@string/nro_chasis"
                    app:layout_constraintBottom_toTopOf="@+id/nroMotorTV"
                    app:layout_constraintStart_toEndOf="@+id/marcaTV"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.172" />

                <TextView
                    android:id="@+id/nroMotorTV"
                    android:layout_width="128dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/nro_motor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/anioTV" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>